--- a/HelpDesk/Views/Home/Index.cshtml
+++ b/HelpDesk/Views/Home/Index.cshtml
@@ -86,10 +86,10 @@
                             @Html.DisplayNameFor(model => model.Description)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.Status)
+                            @Html.DisplayNameFor(model => model.Priority)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.Priority)
+                            @Html.DisplayNameFor(model => model.Status)
                         </th>
                         <th>
                             @Html.DisplayNameFor(model => model.CreatedBy)
@@ -97,6 +97,8 @@
                         <th>
                             @Html.DisplayNameFor(model => model.CreatedOn)
                         </th>
+                        
+
                         <th>No Of Comments</th>
                         <th>Comments</th>
                         <th>View</th>
@@ -106,6 +108,28 @@
                 <tbody>
                     @foreach (var item in Model)
                     {
+                        var colorcode = "Red";
+                        if (item.Status.Code == "Resolved")
+                        {
+                            colorcode = "Green";
+                        }
+                        else if (item.Status.Code == "Escalated")
+                        {
+                            colorcode = "Yellow";
+                        }
+                        else if (item.Status.Code == "InProgress")
+                        {
+                            colorcode = "Purple";
+                        }
+                        else if (item.Status.Code == "Closed")
+                        {
+                            colorcode = "Green";
+                        }
+
+                        else if (item.Status.Code == "AwaitingAssignment")
+                        {
+                            colorcode = "Red";
+                        }
                         <tr>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Id)
@@ -117,10 +141,10 @@
                                 @Html.DisplayFor(modelItem => item.Description)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Status.Description)
-                            </td>
-                            <td>
                                 @Html.DisplayFor(modelItem => item.Priority.Description)
+                            </td>
+                            <td style="background-color:@colorcode">
+                                @Html.DisplayFor(modelItem => item.Status.Description)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.CreatedBy.FullName)
@@ -128,6 +152,7 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.CreatedOn)
                             </td>
+
                             <td style="text-align:center">
                                 <a asp-action="TicketsComments" asp-controller="Comments" asp-route-id="@item.Id">  @item.TicketComments.Count() </a>
                             </td>
