--- a/HelpDesk/Views/Tickets/Details.cshtml
+++ b/HelpDesk/Views/Tickets/Details.cshtml
@@ -96,7 +96,8 @@
                         }
                     </tbody>
                 </table>
-                @if ((@Model.TicketDetails.Status.Code != "Resolved") && (@Model.TicketDetails.Status.Code != "Closed")  )
+                @if ((@Model.TicketDetails.Status.Code != "Resolved")
+                && (@Model.TicketDetails.Status.Code != "Closed"))
                 {
                     <form asp-action="AddComment" method="post" enctype="multipart/form-data">
                         <input type="hidden" class="hidden" asp-for="Id" />
@@ -107,14 +108,7 @@
                         <button class="btn btn-primary float-end mt-5"> Add Comment</button>
                     </form>
                 }
-                @if (@Model.TicketDetails.Status.Code != "Closed")
-                {
-                    <form asp-action="ClosedConfirmed" method="post" enctype="multipart/form-data">
-                        <input type="hidden" class="hidden" asp-for="Id" />
-                        <button class="btn btn-primary float-end mt-5"> Close Ticket</button>
-                    </form>
-                }
-            </div>
+             
         </div>
     </div>
 </div>
