--- a/HelpDesk/Views/Tickets/Index.cshtml
+++ b/HelpDesk/Views/Tickets/Index.cshtml
@@ -113,9 +113,9 @@
                                         <li class="dropdown-divider"></li>
                                         @if (item.Status.Code != "Resolved" && item.Status.Code != "Closed")
                                         {
-                                          <li class="dropdown-item"> <a asp-action="Edit" asp-route-id="@item.Id" class="btn" style="background-color: #28a745; color: white;"><i class="fa fa-user-plus"></i> Assign</a></li>
+                                          <li class="dropdown-item"> <a asp-action="TicketAssignment" asp-route-id="@item.Id" class="btn" style="background-color: #28a745; color: white;"><i class="fa fa-user-plus"></i> Assign</a></li>
                                           <li class="dropdown-divider"></li>
-                                            <li class="dropdown-item"> <a asp-action="Resolve" asp-route-id="@item.Id" class="btn" style="background-color: #17a2b8; color: white;"><i class="fa fa-check-circle"></i> Resolve</a></li>
+                                          <li class="dropdown-item"> <a asp-action="Resolve" asp-route-id="@item.Id" class="btn" style="background-color: #17a2b8; color: white;"><i class="fa fa-check-circle"></i> Resolve</a></li>
                                         }
                                         else
                                         {
