--- a/HelpDesk/Views/Tickets/ReOpen.cshtml
+++ b/HelpDesk/Views/Tickets/ReOpen.cshtml
@@ -39,20 +39,20 @@
                         <td>@Html.DisplayFor(model => model.TicketDetails.CreatedOn)</td>
                     </tr>
                     <tr>
-                        <th style="background:springgreen">@Html.DisplayNameFor(model => model.Attachment)</th>
-                        <td>@Html.DisplayFor(model => model.TicketDetails.Attachment)</td>
-                    </tr>
-                    <tr>
                         <th style="background:springgreen">@Html.DisplayNameFor(model => model.SubCategoryId)</th>
                         <td>@Html.DisplayFor(model => model.TicketDetails.SubCategory.Name)</td>
                     </tr>
                     <tr>
-                        <th style="background:green">@Html.DisplayNameFor(model => model.AssignedToId)</th>
+                        <th style="background:springgreen">@Html.DisplayNameFor(model => model.AssignedToId)</th>
                         <td>@Html.DisplayFor(model => model.TicketDetails.AssignedTo.FullName)</td>
                     </tr>
                     <tr>
-                        <th style="background:green">@Html.DisplayNameFor(model => model.AssignedOn)</th>
+                        <th style="background:springgreen">@Html.DisplayNameFor(model => model.AssignedOn)</th>
                         <td>@Html.DisplayFor(model => model.TicketDetails.AssignedOn)</td>
+                    </tr>
+                    <tr>
+                        <th style="background:springgreen">@Html.DisplayNameFor(model => model.Attachment)</th>
+                        <td>@Html.DisplayFor(model => model.TicketDetails.Attachment)</td>
                     </tr>
                 </table>
 
