--- a/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/HelpDesk/Views/Shared/_Layout.cshtml
@@ -220,25 +220,25 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="" class="nav-link">
+                                    <a asp-action="Index" asp-controller="Tickets" class="nav-link">
                                         <i class="fas fa-circle nav-icon"></i>
                                         <p>Recent Tickets</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="" class="nav-link">
+                                    <a asp-action="AssignedTickets" asp-controller="Tickets" class="nav-link">
                                         <i class="fas fa-circle nav-icon"></i>
                                         <p>Assigned Tickets</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="" class="nav-link">
+                                    <a asp-action="ResolvedTickets" asp-controller="Tickets" class="nav-link">
                                         <i class="fas fa-circle nav-icon"></i>
                                         <p>Resolved Tickets</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="" class="nav-link">
+                                    <a asp-action="ClosedTickets" asp-controller="Tickets" class="nav-link">
                                         <i class="fas fa-circle nav-icon"></i>
                                         <p>Closed Tickets</p>
                                     </a>
