--- a/HelpDesk/Views/Tickets/ClosedTickets.cshtml
+++ b/HelpDesk/Views/Tickets/ClosedTickets.cshtml
@@ -4,6 +4,59 @@
     ViewData["Title"] = "Closed Tickets";
 }
 
+
+<div class="card rounded-4 shadow-sm">
+    <div class="card-body">
+        <form asp-action="ClosedTickets" method="post" enctype="multipart/form-data">
+            <div class="row g-3">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label asp-for="Title" class="form-label fw-semibold">Title</label>
+                        <input asp-for="Title" class="form-control" placeholder="Enter title" />
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label asp-for="CreatedById" class="form-label fw-semibold">Created By</label>
+                        <select asp-for="CreatedById" name="TicketCategoryId" class="form-control" asp-items="ViewBag.CreatedById">
+                            <option value=" "> Select User</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label asp-for="TicketCategoryId" class="form-label fw-semibold">Category</label>
+                        <select asp-for="TicketCategoryId" name="TicketCategoryId" class="form-control" asp-items="ViewBag.CategoryId">
+                            <option value=" "> Select Category</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label asp-for="StatusId" class="form-label fw-semibold">Status</label>
+                        <select asp-for="StatusId" name="StatusId" class="form-control" asp-items="ViewBag.StatusId">
+                            <option value=" "> Select Status</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label asp-for="PriorityId" class="form-label fw-semibold">Priority</label>
+                        <select asp-for="PriorityId" name="PriorityId" class="form-control" asp-items="ViewBag.PriorityId">
+                            <option value=" "> Select Priority</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+
+            <div class="d-flex justify-content-end mt-4">
+                <button type="submit" class="btn btn-success px-4">
+                    <i class="fa fa-search me-2"></i> Search
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
 <div class="card rounded-4">
     <div class="card-body">
         <div class="d-flex align-items-center">
@@ -13,7 +66,8 @@
         <p>
             <a asp-action="Create" class="btn btn-primary ">Add New Ticket</a>
         </p>
-        <table class="table table-bordered table-responsive table-hover table-responsive-lg">
+        <div class="card-body">
+            <table id="example1" class="table table-bordered table-striped">
             <thead>
 
                 <tr>
@@ -131,4 +185,5 @@
             </tbody>
         </table>
     </div>
+</div>
 </div>
