--- a/HelpDesk/Views/Roles/Index.cshtml
+++ b/HelpDesk/Views/Roles/Index.cshtml
@@ -13,7 +13,8 @@
         <p>
             <a asp-action="Create" class="btn btn-primary">Add New Role</a>
         </p>
-        <table class="table table-bordered table-hover table-responsive-lg">
+        <div class="card-body">
+            <table id="example1" class="table table-bordered table-striped">
             <thead class="table-light">
                 <tr>
                     <th>Role No</th>
@@ -43,4 +44,5 @@
             </tbody>
         </table>
     </div>
+</div>
 </div>
