--- a/HelpDesk/Views/Departments/Index.cshtml
+++ b/HelpDesk/Views/Departments/Index.cshtml
@@ -14,7 +14,8 @@
             <a class="btn btn-primary" asp-action="Create">Add New  Department</a>
         </p>
 
-        <table class="table table-hover table-bordered table-striped">
+        <div class="card-body">
+            <table id="example1" class="table table-bordered table-striped">
             <thead>
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.First().Code)</th>
@@ -52,4 +53,5 @@
             </tbody>
         </table>
     </div>
+</div>
 </div>
