--- a/HelpDesk/Views/SystemCodes/Index.cshtml
+++ b/HelpDesk/Views/SystemCodes/Index.cshtml
@@ -13,7 +13,8 @@
         <p>
             <a class="btn btn-primary" asp-action="Create">Create New</a>
         </p>
-        <table class="table table-hover table-bordered table-striped">
+        <div class="card-body">
+            <table id="example1" class="table table-bordered table-striped">
             <thead>
         <tr>
             <th>
@@ -65,5 +66,6 @@
 }
     </tbody>
 </table>
+</div>
 </div>
 </div>
