--- a/HelpDesk/Views/TicketCategories/Index.cshtml
+++ b/HelpDesk/Views/TicketCategories/Index.cshtml
@@ -13,7 +13,8 @@
         <p>
             <a asp-action="Create" class="btn btn-primary ">Add New Ticket Category</a>
         </p>
-        <table class="table table-hover table-bordered table-striped">
+        <div class="card-body">
+            <table id="example1" class="table table-bordered table-striped">
     <thead>
         <tr>
             <th>
@@ -71,5 +72,6 @@
     </tbody>
 </table>
 
+</div>
 </div>
 </div>
