--- a/HelpDesk/Views/TicketSubCategories/SubCategories.cshtml
+++ b/HelpDesk/Views/TicketSubCategories/SubCategories.cshtml
@@ -9,7 +9,8 @@
         <div class="d-flex align-items-center">
             <h6 class="mb-0">Ticket Subcategories</h6>
         </div>
-        <table class="table table-hover table-bordered table-striped">
+        <div class="card-body">
+            <table id="example1" class="table table-bordered table-striped">
             <thead>
                 <tr>
                     <th>
@@ -70,6 +71,6 @@
         </table>
     </div>
 </div>
-
+</div>
 
 
