--- a/HelpDesk/Views/Users/Index.cshtml
+++ b/HelpDesk/Views/Users/Index.cshtml
@@ -12,7 +12,8 @@
 <p>
     <a asp-action="Create" class="btn btn-primary ">Add New User</a>
 </p>
-<table class="table table-bordered table-responsive table-hover table-responsive-lg">
+        <div class="card-body">
+            <table id="example1" class="table table-bordered table-striped">
     <thead>
         <tr>
             <th>
@@ -80,5 +81,6 @@
         }
     </tbody>
 </table>
+</div>
 </div>
 </div>
