--- a/HelpDesk/Views/SystemTasks/Delete.cshtml
+++ b/HelpDesk/Views/SystemTasks/Delete.cshtml
@@ -23,7 +23,7 @@
                 </tr>
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.Parent)</th>
-                    <td>@Html.DisplayFor(model => model.Parent.Id)</td>
+                    <td>@Html.DisplayFor(model => model.Parent.Name)</td>
                 </tr>
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.OrderNumber)</th>
