--- a/HelpDesk/Views/AuditTrails/Create.cshtml
+++ b/HelpDesk/Views/AuditTrails/Create.cshtml
@@ -4,42 +4,58 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>AuditTrail</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card rounded-4">
+    <div class="card-body">
+        <div class="d-flex align-items-center">
+            <h6 class="mb-0">Audit Trails</h6>
+        </div>
+        <hr />
+        <div class="row">
+            <div class="col-md-12">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="row">
+            <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="Action" class="control-label"></label>
                 <input asp-for="Action" class="form-control" />
                 <span asp-validation-for="Action" class="text-danger"></span>
             </div>
+            </div>
+            <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="Module" class="control-label"></label>
                 <input asp-for="Module" class="form-control" />
                 <span asp-validation-for="Module" class="text-danger"></span>
             </div>
+            </div>
+            <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="AffectedTable" class="control-label"></label>
                 <input asp-for="AffectedTable" class="form-control" />
                 <span asp-validation-for="AffectedTable" class="text-danger"></span>
             </div>
+            </div>
+            <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="TimeStamp" class="control-label"></label>
                 <input asp-for="TimeStamp" class="form-control" />
                 <span asp-validation-for="TimeStamp" class="text-danger"></span>
             </div>
+            </div>
+            <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="IpAddress" class="control-label"></label>
                 <input asp-for="IpAddress" class="form-control" />
                 <span asp-validation-for="IpAddress" class="text-danger"></span>
             </div>
+            </div>
+            <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
                 <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
+            </div>
+            </div>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -47,9 +63,11 @@
         </form>
     </div>
 </div>
+</div>
+</div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-warning" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
