--- a/HelpDesk/Views/AuditTrails/Delete.cshtml
+++ b/HelpDesk/Views/AuditTrails/Delete.cshtml
@@ -4,54 +4,46 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<div class="card rounded-4">
+    <div class="card-body">
+        <div class="d-flex align-items-center">
+            <h6 class="mb-0">Delete Comment</h6>
+        </div>
+        <h3 class="text-danger">Are you sure you want to delete this?</h3>
+        <hr />
+        <table class="table table-bordered table-hover table-responsive-lg">
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.Action)</th>
+                <td>@Html.DisplayFor(model => model.Action)</td>
+            </tr>
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.Module)</th>
+                <td>@Html.DisplayFor(model => model.Module)</td>
+            </tr>
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.AffectedTable)</th>
+                <td>@Html.DisplayFor(model => model.AffectedTable)</td>
+            </tr>
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.TimeStamp)</th>
+                <td>@Html.DisplayFor(model => model.TimeStamp)</td>
+            </tr>
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.IpAddress)</th>
+                <td>@Html.DisplayFor(model => model.IpAddress)</td>
+            </tr>
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.User)</th>
+                <td>@Html.DisplayFor(model => model.User.FullName)</td>
+            </tr>
+        </table>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>AuditTrail</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Action)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Action)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Module)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Module)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AffectedTable)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AffectedTable)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TimeStamp)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TimeStamp)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IpAddress)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IpAddress)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <div class="mt-3">
+                <input type="submit" value="Delete" class="btn btn-danger" />
+                <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+            </div>
+        </form>
+    </div>
 </div>
