--- a/HelpDesk/Views/AuditTrails/Details.cshtml
+++ b/HelpDesk/Views/AuditTrails/Details.cshtml
@@ -4,51 +4,42 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<div class="card rounded-4">
+    <div class="card-body">
+        <div class="d-flex align-items-center">
+            <h6 class="mb-0">Audit Trail Details</h6>
+        </div>
+        <hr />
+        <table class="table table-bordered table-hover table-responsive-lg">
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.Action)</th>
+                <td>@Html.DisplayFor(model => model.Action)</td>
+            </tr>
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.Module)</th>
+                <td>@Html.DisplayFor(model => model.Module)</td>
+            </tr>
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.AffectedTable)</th>
+                <td>@Html.DisplayFor(model => model.AffectedTable)</td>
+            </tr>
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.TimeStamp)</th>
+                <td>@Html.DisplayFor(model => model.TimeStamp)</td>
+            </tr>
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.IpAddress)</th>
+                <td>@Html.DisplayFor(model => model.IpAddress)</td>
+            </tr>
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.User)</th>
+                <td>@Html.DisplayFor(model => model.User.FullName)</td>
+            </tr>
+        </table>
 
-<div>
-    <h4>AuditTrail</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Action)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Action)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Module)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Module)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AffectedTable)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AffectedTable)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TimeStamp)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TimeStamp)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IpAddress)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IpAddress)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+        <div class="mt-3">
+            <a class="btn btn-warning" asp-action="Edit" asp-route-id="@Model?.Id">Edit</a>
+            <a class="btn btn-primary" asp-action="Index">Back to List</a>
+        </div>
+    </div>
 </div>
