--- a/HelpDesk/Views/AuditTrails/Index.cshtml
+++ b/HelpDesk/Views/AuditTrails/Index.cshtml
@@ -1,71 +1,45 @@
-﻿    @model IEnumerable<HelpDesk.Models.AuditTrail>
+﻿@model IEnumerable<HelpDesk.Models.AuditTrail>
 
-    @{
-        ViewData["Title"] = "Index";
-    }
+@{
+    ViewData["Title"] = "Index";
+}
 
-    <div class="card rounded-4">
+<div class="card rounded-4">
+    <div class="card-body">
+        <div class="d-flex align-items-center">
+            <h6 class="mb-0">Recent Audit Trails</h6>
+        </div>
+
         <div class="card-body">
-            <div class="d-flex align-items-center">
-                <h6 class="mb-0">Recent Audit Trails</h6>
-            </div>
-
-
-        <div class="card-body">
-            <table id="example1" class="table table-bordered table-striped">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Action)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Module)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.AffectedTable)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.TimeStamp)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.IpAddress)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.User)
-                </th>
-                <th>View</th>
-            </tr>
-        </thead>
-        <tbody>
-    @foreach (var item in Model) {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Action)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Module)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AffectedTable)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TimeStamp)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IpAddress)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.User.FullName)
-                </td>
-                    <td>
-
-                        <a class="btn btn-warning" asp-action="Details" asp-route-id="@item.Id">Details</a>
-
-                    </td>
-            </tr>
-    }
-        </tbody>
-    </table>
+            <table id="example1" class="table table-bordered table-striped table-sm">
+                <thead>
+                    <tr>
+                        <th style="width: 15%;">@Html.DisplayNameFor(model => model.Action)</th>
+                        <th style="width: 15%;">@Html.DisplayNameFor(model => model.Module)</th>
+                        <th style="width: 20%;">@Html.DisplayNameFor(model => model.AffectedTable)</th>
+                        <th style="width: 15%;">@Html.DisplayNameFor(model => model.TimeStamp)</th>
+                        <th style="width: 15%;">@Html.DisplayNameFor(model => model.IpAddress)</th>
+                        <th style="width: 15%;">@Html.DisplayNameFor(model => model.User)</th>
+                        <th style="width: 5%;">View</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>@Html.DisplayFor(modelItem => item.Action)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Module)</td>
+                            <td>@Html.DisplayFor(modelItem => item.AffectedTable)</td>
+                            <td>@Html.DisplayFor(modelItem => item.TimeStamp)</td>
+                            <td>@Html.DisplayFor(modelItem => item.IpAddress)</td>
+                            <td>@Html.DisplayFor(modelItem => item.User.FullName)</td>
+                            <td>
+                                <a class="btn btn-warning btn-sm" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
-    </div>
-    </div>
+</div>
