--- a/HelpDesk/Views/SystemTasks/Create.cshtml
+++ b/HelpDesk/Views/SystemTasks/Create.cshtml
@@ -32,7 +32,7 @@
             <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="ParentId" class="control-label"></label>
-                <select asp-for="ParentId" id="PriorityId" name="PriorityId" class="form-control " asp-items="ViewBag.ParentId">
+                   <select asp-for="ParentId" id="ParentId" name="ParentId" class="form-control " asp-items="ViewBag.ParentId">
                    <option value=" "> Select Parent Name</option>
                 </select>
             </div>
