--- a/HelpDesk/Views/SystemTasks/Index.cshtml
+++ b/HelpDesk/Views/SystemTasks/Index.cshtml
@@ -14,54 +14,43 @@
             <a class="btn btn-primary" asp-action="Create">Add New System Task</a>
         </p>
         <div class="card-body">
-            <table id="example1" class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Code)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Parent)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OrderNumber)
-            </th>
-            <th>View</th>
-            <th>Edit</th>
-            <th>Delete</th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Code)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Parent.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderNumber)
-            </td>
-            <td>
-               <a class="btn btn-warning" asp-action="Details" asp-route-id="@item.Id">Details</a>
-            </td>
-            <td>
-               <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>  
-            </td>
-            <td>
-               <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
-</div>
-</div>
+            <table id="example1" class="table table-bordered table-striped table-sm">
+                <thead>
+                    <tr>
+                        <th style="width: 10%;">@Html.DisplayNameFor(model => model.Code)</th>
+                        <th style="width: 15%;">@Html.DisplayNameFor(model => model.Name)</th>
+                        <th style="width: 15%;">@Html.DisplayNameFor(model => model.Parent)</th>
+                        <th style="width: 15%;">@Html.DisplayNameFor(model => model.CreatedBy)</th>
+                        <th style="width: 15%;">@Html.DisplayNameFor(model => model.CreatedOn)</th>
+                        <th style="width: 10%;">@Html.DisplayNameFor(model => model.OrderNumber)</th>
+                        <th style="width: 5%;">View</th>
+                        <th style="width: 5%;">Edit</th>
+                        <th style="width: 5%;">Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>@Html.DisplayFor(modelItem => item.Code)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Parent.Name)</td>
+                            <td>@Html.DisplayFor(modelItem => item.CreatedBy.FullName)</td>
+                            <td>@Html.DisplayFor(modelItem => item.CreatedOn)</td>
+                            <td>@Html.DisplayFor(modelItem => item.OrderNumber)</td>
+                            <td>
+                                <a class="btn btn-warning btn-sm" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                            </td>
+                            <td>
+                                <a class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                            </td>
+                            <td>
+                                <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
