--- a/HelpDesk/Views/SystemCodeDetails/Create.cshtml
+++ b/HelpDesk/Views/SystemCodeDetails/Create.cshtml
@@ -7,7 +7,7 @@
     <div class="card rounded-4">
         <div class="card-body">
             <div class="d-flex align-items-center">
-                <h6 class="mb-0">System Code Details</h6>
+                <h6 class="mb-0">Add System Code Details</h6>
             </div>
             <hr />
             <div class="row">
