--- a/HelpDesk/Views/SystemSettings/Create.cshtml
+++ b/HelpDesk/Views/SystemSettings/Create.cshtml
@@ -1,12 +1,13 @@
-﻿@model HelpDesk.Models.SystemCode
+﻿@model HelpDesk.Models.SystemSetting
 
 @{
     ViewData["Title"] = "Create";
 }
+
 <div class="card rounded-4">
     <div class="card-body">
         <div class="d-flex align-items-center">
-            <h6 class="mb-0"> Add System Code </h6>
+            <h6 class="mb-0">Add System Setting </h6>
         </div>
         <hr />
         <div class="row">
@@ -14,18 +15,25 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="row">
-            <div class="col-md-6">
+             <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="Code" class="control-label"></label>
                 <input asp-for="Code" class="form-control" />
                 <span asp-validation-for="Code" class="text-danger"></span>
             </div>
-            </div>
-             <div class="col-md-6">
+            </div>    
+            <div class="col-md-6">
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            </div>
+            <div class="col-md-6">
+            <div class="form-group">
+                <label asp-for="Value" class="control-label"></label>
+                <input asp-for="Value" class="form-control" />
+                <span asp-validation-for="Value" class="text-danger"></span>
             </div>
             </div>
             </div>
@@ -37,7 +45,6 @@
 </div>
 </div>
 </div>
-
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
